add_executable(2022_day01_main day01/main.cpp)
add_executable(2022_day02_main day02/main.cpp)
add_executable(2022_day03_main day03/main.cpp)
add_executable(2022_day04_main day04/main.cpp)
add_executable(2022_day05_main day05/main.cpp)
add_executable(2022_day06_main day06/main.cpp)
add_executable(2022_day07_main day07/main.cpp)
add_executable(2022_day08_main day08/main.cpp)
add_executable(2022_day09_main day09/main.cpp)
add_executable(2022_day10_main day10/main.cpp)
add_executable(2022_day11_main day11/main.cpp)
add_executable(2022_day12_main day12/main.cpp)
