add_executable(2023_day01_main day01/main.cpp)
add_executable(2023_day02_main day02/main.cpp)
# add_executable(2023_day03_main day03/main.cpp)
add_executable(2023_day04_main day04/main.cpp)
# add_executable(2023_day05_main day05/main.cpp)
add_executable(2023_day06_main day06/main.cpp)
add_executable(2023_day07_main day07/main.cpp)
add_executable(2023_day08_main day08/main.cpp)
add_executable(2023_day09_main day09/main.cpp)
add_executable(2023_day11_main day11/main.cpp)
add_executable(2023_day15_main day15/main.cpp)
add_executable(2023_day16_main day16/main.cpp)
