add_executable(2024_day01_main day01/main.cpp)
add_executable(2024_day02_main day02/main.cpp)
add_executable(2024_day03_main day03/main.cpp)
add_executable(2024_day04_main day04/main.cpp)
add_executable(2024_day05_main day05/main.cpp)
add_executable(2024_day06_main day06/main.cpp)
add_executable(2024_day07_main day07/main.cpp)
add_executable(2024_day13_main day13/main.cpp)
add_executable(2024_day19_main day19/main.cpp)
